Fix collapsable navigation for mobile devices

--- a/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/bootstrap.less
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/bootstrap.less
@@ -21,7 +21,7 @@
 @import "@{bootstrapLessPath}/buttons.less";
 
 // Components
-//@import "@{bootstrapLessPath}/component-animations.less";
+@import "@{bootstrapLessPath}/component-animations.less";
 @import "@{bootstrapLessPath}/glyphicons.less";
 @import "@{bootstrapLessPath}/dropdowns.less";
 @import "@{bootstrapLessPath}/button-groups.less";
