--- a/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
@@ -161,6 +161,16 @@
 	}
  }
  
+ .nav-justified > li > a {
+    margin-bottom: 0;
+ }    
+ 
+ .navbar-collapse.collapse.in {
+ 	.navbar-main {
+ 		display:none;
+ 	}
+ }
+ 
  
  .meta-section .stopper {
  	border-top: 5px solid @millerntor-brown;
