--- a/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
@@ -2295,6 +2295,27 @@ input[type="reset"].btn-block,
 input[type="button"].btn-block {
   width: 100%;
 }
+.fade {
+  opacity: 0;
+  -webkit-transition: opacity 0.15s linear;
+  transition: opacity 0.15s linear;
+}
+.fade.in {
+  opacity: 1;
+}
+.collapse {
+  display: none;
+}
+.collapse.in {
+  display: block;
+}
+.collapsing {
+  position: relative;
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: height 0.35s ease;
+  transition: height 0.35s ease;
+}
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('../Fonts/glyphicons-halflings-regular.eot');
@@ -5584,6 +5605,12 @@ button.close {
   color: #000;
   text-transform: uppercase;
   font-weight: bold;
+}
+.nav-justified > li > a {
+  margin-bottom: 0;
+}
+.navbar-collapse.collapse.in .navbar-main {
+  display: none;
 }
 .meta-section .stopper {
   border-top: 5px solid #693c10;
